# COMP4300

./: .gitignore  CMakeLists.txt  imgui.ini
src/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  Components.cpp  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  GameScene.cpp  GameScene.h  GameSceneSettings.h  GameSettings.cpp  GameSettings.h  GuiManager.cpp  GuiManager.h  MenuScene.cpp  MenuScene.h  Player.cpp  Player.h  Scene.cpp  Scene.h  ShapeProperties.h  Utilities.cpp  Utilities.h  Vec2.cpp  Vec2.h  main.cpp
